[ feat ] backend conected in the frontend

--- a/front/tsconfig.json
+++ b/front/tsconfig.json
@@ -19,7 +19,10 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "@/shared/*": ["./shared/*"],
+      "@/styles/*": ["./styles/*"],
+      "@/provider/*": ["./provider/*"]
     }
   },
   "include": [
